# blogs_quarto

./: _quarto.yml  index.qmd  pyproject.toml
docs/: about.html  index.html  index.xml  search.json  sitemap.xml
docs/posts/post-with-code/: index.html
docs/posts/welcome/: index.html
posts/mypost_fun/: index.qmd
